Improve admin user and NFC feedback
